# SlenderWestLakeOS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c
application/: CMakeLists.txt  main.c
application/edu_lan/: AppBloodOxygen.c  AppButtonPanel.c  AppCodeScanner.c  AppEnvSensor.c  AppGestureSensor.c  AppImuSensor.c  AppJoystick.c  AppLCD.c  AppLEDArray.c  AppMagneticField.c  AppMotor.c  AppPIR.c  AppRFID.c  AppRainSensor.c  AppRotaryEncoder.c  AppSteeringGear.c  AppWaterPump.c  EduLanMain.c  edu_lan_app.h
application/examples/adc/: main.c
application/examples/bt/: main.c  readme.txt
application/examples/cputime/: CMakeLists.txt  main.c
application/examples/fatfs/application/: CMakeLists.txt  fatfsgen_example_main.c
application/examples/gpio/: CMakeLists.txt  main.c
application/examples/i2c/: CMakeLists.txt  main.c
application/examples/pwm/: main.c
application/examples/rtc/: CMakeLists.txt  main.c
application/examples/sensor/: CMakeLists.txt  main.c
application/examples/spi/: CMakeLists.txt  main_io_master.c  main_io_slave.c
application/examples/uart/: CMakeLists.txt  main.c
application/examples/wifi/: CMakeLists.txt  main.c  net_socket.h  smt_connect.c
application/single_switch/: AppSingleSwitch.c
driver/jeejioxie_esp32c3/board/edu_lan/: CMakeLists.txt
driver/jeejioxie_esp32c3/board/edu_lan/ambient_light/: bh1750fvi.c  bh1750fvi.h  drv_sensor_bh1750fvi.c  drv_sensor_bh1750fvi.h
driver/jeejioxie_esp32c3/board/edu_lan/button_panel/: button_665.c  button_665.h  drv_sensor_button_665.c  drv_sensor_button_665.h
driver/jeejioxie_esp32c3/board/edu_lan/co/: drv_sensor_mq7.c  drv_sensor_mq7.h  mq7.c  mq7.h
driver/jeejioxie_esp32c3/board/edu_lan/display/: drv_sensor_st7789.c  drv_sensor_st7789.h  st7789.c  st7789.h
driver/jeejioxie_esp32c3/board/edu_lan/getsture/: drv_sensor_paj7620u2.c  drv_sensor_paj7620u2.h  paj7620u2.c  paj7620u2.h
driver/jeejioxie_esp32c3/board/edu_lan/hyetometer/: drv_sensor_mk002.c  drv_sensor_mk002.h  mk002.c  mk002.h
driver/jeejioxie_esp32c3/board/edu_lan/iaq/: drv_sensor_mq135.c  drv_sensor_mq135.h  mq135.c  mq135.h
driver/jeejioxie_esp32c3/board/edu_lan/io_expand/: drv_sensor_pca9536.c  drv_sensor_pca9536.h  pca9536.c  pca9536.h
driver/jeejioxie_esp32c3/board/edu_lan/joystick/: drv_sensor_ky023.c  drv_sensor_ky023.h  ky_023.c  ky_023.h
driver/jeejioxie_esp32c3/board/edu_lan/led_array/: drv_sensor_ws2835.c  drv_sensor_ws2835.h  ws2835.c  ws2835.h
driver/jeejioxie_esp32c3/board/edu_lan/magnetic/: cc6201st.c  cc6201st.h  drv_sensor_cc6201st.c  drv_sensor_cc6201st.h
driver/jeejioxie_esp32c3/board/edu_lan/motor/: dc3v_n20.c  dc3v_n20.h  drv_sensor_dc3v_n20.c  drv_sensor_dc3v_n20.h
driver/jeejioxie_esp32c3/board/edu_lan/pir/: drv_sensor_sbf01.c  drv_sensor_sbf01.h  sbf01.c  sbf01.h
driver/jeejioxie_esp32c3/board/edu_lan/rfid/: drv_sensor_rc522.c  drv_sensor_rc522.h  rc522.c  rc522.h
driver/jeejioxie_esp32c3/board/edu_lan/rotary_encoder/: drv_sensor_ec11.c  drv_sensor_ec11.h  ec11.c  ec11.h
driver/jeejioxie_esp32c3/board/edu_lan/scanner/: drv_sensor_md280.c  drv_sensor_md280.h  md280.c  md280.h
driver/jeejioxie_esp32c3/board/edu_lan/six_axis/: drv_sensor_qmi8658.c  drv_sensor_qmi8658.h  qmi8658.c  qmi8658.h
driver/jeejioxie_esp32c3/board/edu_lan/smoke/: drv_sensor_mq2.c  drv_sensor_mq2.h  mq2.c  mq2.h
driver/jeejioxie_esp32c3/board/single_switch/: CMakeLists.txt  drv_sensor_single_switch.c  drv_sensor_single_switch.h  single_switch.c  single_switch.h
driver/jeejioxie_esp32c3/chip/driver/: CMakeLists.txt  Kconfig  gptimer.c  sdkconfig.rename  touch_sensor_common.c  twai.c
driver/jeejioxie_esp32c3/chip/esp_system/: CMakeLists.txt  Kconfig  check_system_init_priorities.py  crosscore_int.c  esp_err.c  esp_ipc.c  esp_system.c  fpga_overrides.c  freertos_hooks.c  pm.lf  sdkconfig.rename  startup.c  system_time.c  task_wdt.c  xt_wdt.c
framework/cloud/: CMakeLists.txt  cloud_http.h
framework/factory_test/: CMakeLists.txt  factory_test.h  md5_jee.h
framework/lwip/: CMakeLists.txt
framework/maopao/: CMakeLists.txt  JeeErrno.h  JeeKeyManager.h  JeeMQTTConnection.h  JeeMQTTMessage.h  JeeMQTTTransaction.h  JeeRPC.h  JeeUtil.h  bsp_define.h
hal/: CMakeLists.txt
hal/include/: hal_adc.h  hal_cputime.h  hal_crypto.h  hal_gpio.h  hal_i2c-bit-ops.h  hal_i2c.h  hal_i2c_dev.h  hal_jeeconfig.h  hal_phy.h  hal_phy_mdio.h  hal_pwm.h  hal_ringbuffer.h  hal_rtc.h  hal_sensor.h  hal_serial.h  hal_service.h  hal_spi-bit-ops.h  hal_spi.h  hal_usb_common.h  hal_usb_host.h  hal_wlan_cfg.h  hal_wlan_dev.h  hal_wlan_lwip.h  hal_wlan_mgnt.h  hal_wlan_prot.h  hal_wlan_workqueue.h  hal_workqueue.h  hw_bignum.h  hw_crc.h  hw_gcm.h  hw_hash.h  hw_rng.h  hw_symmetric.h  hwcrypto.h
hal/sensor/: CMakeLists.txt  hal_class.c
kernel/: CMakeLists.txt  Kconfig
kernel/arch/riscv/: CMakeLists.txt
kernel/auto_init/: auto_init.h
kernel/include/freertos/: FreeRTOS.h  device.h  io_dev_mgt.h  jeedef.h  portable.h  stdint.readme
kernel/lib/fatfs/: ff.h
kernel/lib/log/: CMakeLists.txt
kernel/lib/log/include/: esp_log.h
kernel/lib/pthread/: CMakeLists.txt
kernel/lib/ringbuf/: CMakeLists.txt
tal/: CMakeLists.txt
tal/button_panel/: tal_button_panel.c  tal_button_panel.h
tal/display/: font.h  tal_display.c  tal_display.h
tal/environment/: tal_environment.c  tal_environment.h
tal/getsture/: tal_getsture.c  tal_getsture.h
tal/hyetometer/: tal_hyetometer.c  tal_hyetometer.h
tal/joystick/: tal_joystick.c  tal_joystick.h
tal/led_array/: tal_led_array.c  tal_led_array.h
tal/magnetic/: tal_magnetic.c  tal_magnetic.h
tal/motor/: tal_motor.c  tal_motor.h
tal/pir/: tal_pir.c  tal_pir.h
tal/rfid/: tal_rfid.c  tal_rfid.h
tal/rotary_encoder/: tal_rotary_encoder.c  tal_rotary_encoder.h
tal/scanner/: tal_scanner.c  tal_scanner.h
tal/single_switch/: tal_single_switch.c  tal_single_switch.h
tal/six_axis/: tal_six_axis.c  tal_six_axis.h
tal/spo2/: tal_spo2.c  tal_spo2.h
tal/steering_gear/: tal_steering_gear.c  tal_steering_gear.h
tal/water_pump/: tal_waterpump.c  tal_waterpump.h
(+335 files in other folders)
