idf_component_register(SRCS "temperature_humidity/dht20.c" "temperature_humidity/drv_sensor_dht20_iomodel.c"
                             "pir/sbf01.c" "pir/drv_sensor_sbf01.c"
                             "rotary_encoder/drv_sensor_ec11.c" "rotary_encoder/ec11.c" 
                             "steering_gear/drv_sensor_sg90.c" "steering_gear/sg90.c"
                             "magnetic/cc6201st.c" "magnetic/drv_sensor_cc6201st.c"
                             "water_pump/lb1427b.c" "water_pump/drv_sensor_lb1427b.c"
			                 "six_axis/drv_sensor_qmi8658.c" "six_axis/qmi8658.c"
				             "rfid/rc522.c" "rfid/drv_sensor_rc522.c"
				             "hyetometer/mk002.c" "hyetometer/drv_sensor_mk002.c" 
                             "button_panel/button_665.c" "button_panel/drv_sensor_button_665.c"
                             "led_array/ws2835.c" "led_array/drv_sensor_ws2835.c"
                             "getsture/paj7620u2.c" "getsture/drv_sensor_paj7620u2.c"
                             "spo2/max30102.c" "spo2/drv_sensor_max30102.c"
                             "scanner/md280.c" "scanner/drv_sensor_md280.c"
                              "ambient_light/bh1750fvi.c" "ambient_light/drv_sensor_bh1750fvi.c"
                             "io_expand/pca9536.c" "io_expand/drv_sensor_pca9536.c"
                             "smoke/mq2.c" "smoke/drv_sensor_mq2.c"
                             "iaq/mq135.c" "iaq/drv_sensor_mq135.c"
                             "co/mq7.c" "co/drv_sensor_mq7.c"
			     "motor/dc3v_n20.c" "motor/drv_sensor_dc3v_n20.c"
			     "joystick/ky_023.c" "joystick/drv_sensor_ky023.c"
                             "display/st7789.c" "display/drv_sensor_st7789.c"
                       INCLUDE_DIRS "." "${jeejio_path}/kernel/include/freertos" "${jeejio_path}/hal/include"
                                        "${jeejio_path}/driver/jeejioxie_esp32c3/chip/driver/include/driver"
                                        "${jeejio_path}/driver/jeejioxie_esp32c3/chip/storage/vfs/include" 
                                        "${jeejio_path}/driver/jeejioxie_esp32c3/chip/storage/fatfs/vfs"
                                        "${jeejio_path}/kernel/lib/fatfs"
                                        "${jeejio_path}/driver/jeejioxie_esp32c3/chip/storage/fatfs/wear_levelling/include"
                                        "${jeejio_path}/driver/jeejioxie_esp32c3/chip/storage/spi_flash/include"
                       REQUIRES "driver" "hal"
                       PRIV_REQUIRES  kernel)

jee_auto_init_list_register()